--- a/requirements.txt-3.8
+++ b/requirements.txt-3.8
@@ -1,27 +1,42 @@
-wheel
 argcomplete==3.2.2
 astroid==3.0.3
+black==24.2.0
 certifi==2024.2.2
 chardet==5.2.0
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
-dnspython>=2.6.1
+dill==0.3.8
+dnspython==2.6.1
 docopt==0.6.2
 etcd3==0.12.0
 grpcio==1.60.1
-idna>=3.7
+idna==3.7
 isort==5.13.2
 lazy-object-proxy==1.10.0
 mccabe==0.7.0
+mypy==1.8.0
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.12.1
+pipdeptree==2.20.0
 pipreqs==0.4.13
+pkg_resources==0.0.0
+platformdirs==4.2.0
 protobuf==4.25.2
 pylint==3.0.3
 PyYAML==6.0.1
-requests>=2.32.0
+requests==2.32.3
 six==1.16.0
 tenacity==8.2.3
 toml==0.10.2
-urllib3>=2.2.0
+tomli==2.0.1
+tomlkit==0.12.3
+types-colorama==0.4.15.20240205
+types-PyYAML==6.0.12.12
+types-requests==2.31.0.20240218
+typing_extensions==4.9.0
+urllib3==2.2.2
 wrapt==1.16.0
 xmltodict==0.13.0
 yarg==0.1.9
